# sortmp3

./: .gitignore  ReadMe.md  cmdfix.py  fixmusfil.py  fn2at.py  mvalbum.py  mvsingle.py  pyproject.toml
src/sortmp3/: cmdfix.py  fix.py  fullog.py
tests/: test_cmdfix.py  test_fix.py
